2024-09-15T00:45:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10866759168 # 419
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-15
* notice: last 14d: unq all: 4 6
* notice: prev accum: outdated-unq outdated-all / unq all: 694 1165 / 699 1170
* notice: next accum: outdated-unq outdated-all / unq all: 694 1165 / 700 1171
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-09-14]

2024-09-14T00:39:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10857992131 # 418
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-14
* notice: last 14d: unq all: 4 5
* notice: prev accum: outdated-unq outdated-all / unq all: 693 1164 / 699 1170
* notice: next accum: outdated-unq outdated-all / unq all: 694 1165 / 699 1170
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-08-30] / []

2024-09-13T00:40:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10840958006 # 417
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-13
* notice: last 14d: unq all: 4 6
* notice: prev accum: outdated-unq outdated-all / unq all: 691 1162 / 698 1169
* notice: next accum: outdated-unq outdated-all / unq all: 693 1164 / 699 1170
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-08-29] / [2024-09-12]

2024-09-12T00:40:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10821959706 # 416