@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-09-15T00:45:42Z",
+  "timestamp" : "2024-09-16T01:15:43Z",
   "count_outdated" : 1165,
   "uniques_outdated" : 694,
-  "count" : 1171,
-  "uniques" : 700,
+  "count" : 1172,
+  "uniques" : 701,
   "clones" : [
     {
       "timestamp": "2024-09-04T00:00:00Z",
@@ -43,6 +43,15 @@
     },
     {
       "timestamp": "2024-09-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
