@@ -1,6 +1,6 @@
 {
-  "count": 6,
-  "uniques": 4,
+  "count": 7,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2024-09-04T00:00:00Z",
@@ -24,6 +24,11 @@
     },
     {
       "timestamp": "2024-09-14T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-09-15T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
