@@ -1,3 +1,12 @@
+2024-09-16T01:15:43Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10875975914 # 420
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-16
+* notice: last 14d: unq all: 5 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 694 1165 / 700 1171
+* notice: next accum: outdated-unq outdated-all / unq all: 694 1165 / 701 1172
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-09-15]
+
 2024-09-15T00:45:42Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10866759168 # 419
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-15
